--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "imperia-consulting",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "node server.js",
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build --outDir dist/client",
-    "build:server": "vite build --ssr src/EntryServer.jsx --outDir dist/server",
-    "lint": "eslint .",
-    "preview": "cross-env NODE_ENV=production node server.js"
-  },
-  "dependencies": {
-    "@microsoft/clarity": "^1.0.0",
-    "@portabletext/react": "^3.2.1",
-    "@sanity/client": "^7.6.0",
-    "@sanity/image-url": "^1.1.0",
-    "express": "^4.21.2",
-    "framer-motion": "^12.23.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^6.26.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@iconify/react": "^6.0.0",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "autoprefixer": "^10.4.21",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "postcss": "^8.5.5",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.3.5"
-  }
+	"name": "imperia-consulting",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "node server.js",
+		"build": "npm run build:client && npm run build:server",
+		"build:client": "vite build --outDir dist/client",
+		"build:server": "vite build --ssr src/EntryServer.jsx --outDir dist/server",
+		"lint": "eslint .",
+		"preview": "cross-env NODE_ENV=production node server.js",
+		"install": "npm install --legacy-peer-deps"
+	},
+	"dependencies": {
+		"@microsoft/clarity": "^1.0.0",
+		"@portabletext/react": "^3.2.1",
+		"@sanity/client": "^7.6.0",
+		"@sanity/image-url": "^1.1.0",
+		"express": "^4.21.2",
+		"framer-motion": "^12.23.3",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-helmet-async": "^2.0.5",
+		"react-router-dom": "^6.26.2"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.25.0",
+		"@iconify/react": "^6.0.0",
+		"@tailwindcss/line-clamp": "^0.4.4",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.2",
+		"@vitejs/plugin-react": "^4.4.1",
+		"autoprefixer": "^10.4.21",
+		"cross-env": "^7.0.3",
+		"eslint": "^9.25.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"globals": "^16.0.0",
+		"postcss": "^8.5.5",
+		"tailwindcss": "^3.4.17",
+		"vite": "^6.3.5"
+	}
 }
