--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 		"build:client": "vite build --outDir dist/client",
 		"build:server": "vite build --ssr src/EntryServer.jsx --outDir dist/server",
 		"lint": "eslint .",
-		"preview": "cross-env NODE_ENV=production node server.js",
-		"install": "npm install --legacy-peer-deps"
+		"preview": "cross-env NODE_ENV=production node server.js"
 	},
 	"dependencies": {
 		"@microsoft/clarity": "^1.0.0",
