--- a/package.json
+++ b/package.json
@@ -4,19 +4,16 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "node server.js",
-		"build": "npm run build:client && npm run build:server",
-		"build:client": "vite build --outDir dist/client",
-		"build:server": "vite build --ssr src/EntryServer.jsx --outDir dist/server",
+		"dev": "vite",
+		"build": "vite build",
 		"lint": "eslint .",
-		"preview": "cross-env NODE_ENV=production node server.js"
+		"preview": "vite preview"
 	},
 	"dependencies": {
 		"@microsoft/clarity": "^1.0.0",
 		"@portabletext/react": "^3.2.1",
 		"@sanity/client": "^7.6.0",
 		"@sanity/image-url": "^1.1.0",
-		"express": "^4.21.2",
 		"framer-motion": "^12.23.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -26,13 +23,11 @@
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
 		"@iconify/react": "^6.0.0",
-		"@tailwindcss/line-clamp": "^0.4.4",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/react": "^18.3.23",
 		"@types/react-dom": "^18.3.7",
 		"@vitejs/plugin-react": "^4.4.1",
 		"autoprefixer": "^10.4.21",
-		"cross-env": "^7.0.3",
 		"eslint": "^9.25.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
